Fixed AssembledDictionaryEntry not correctly padding key